przed zmiana w state'ach

--- a/www/modules/globalChat/templates/chat.html
+++ b/www/modules/globalChat/templates/chat.html
@@ -45,7 +45,7 @@
 
 
 
-  <form name="chatForm" novalidate ng-submit="chat_ctrl.submitChatMsg()">
+  <form name="chatForm" id="chatForm" novalidate ng-submit="chat_ctrl.submitChatMsg()">
 
     <ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
 
