--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -11,7 +11,7 @@
              Home
             </ion-item>
 
-            <ion-item nav-clear menu-close ui-sref="app.friends.list">
+            <ion-item nav-clear menu-close href="#/app/friends/list"> <!-- so far i see no difference here between ui sref and href -->
               Friends
             </ion-item>
 
