--- a/www/modules/friendList/templates/list.html
+++ b/www/modules/friendList/templates/list.html
@@ -4,12 +4,10 @@
     <ion-nav-title>
       Friends
     </ion-nav-title>
-
   </ion-nav-bar>
 
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-
   </ion-nav-buttons>
 
   <ion-content class="has-header padding has-tabs">
@@ -27,7 +25,7 @@
 
     <div ng-repeat="friend in friend_ctrl.friendList">
 
-      <a class="item item-icon-left item-icon-right" href="#">
+      <a class="item item-icon-left item-icon-right" href="#/app/privatechat/{{friend.username}}" ng-if="friend.userStatus">
         <i class="icon ion-chatbubble-working"></i>
         {{ friend.username }}
         <i class="icon ion-checkmark-round green-icon" ng-show="friend.userStatus"></i>
