naprawiony chat, oddzielny server http, connect i disconnect rejestrowane na wejsciu/wyjsciu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -11,11 +11,11 @@
              Home
             </ion-item>
 
-            <ion-item nav-clear menu-close href="#/app/friends/list"> <!-- so far i see no difference here between ui sref and href -->
+            <ion-item nav-clear menu-close href="#/app/friends"> <!-- so far i see no difference here between ui sref and href -->
               Friends
             </ion-item>
 
-            <ion-item nav-clear menu-close ui-sref="app.chat">
+            <ion-item nav-clear menu-close href="#/app/chat">
               Chat
             </ion-item>
 
