poczatek quizu, zly branch

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -54,17 +54,19 @@
           Notifications
         </div>
 
+      <br/><br/><br/>
+
+      <button class="button button-full button-balanced" ui-sref="app.quiz">
+        QuizME
+      </button>
 
 
-<br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-      <div class="row">
-        <div class="col col-60 col-offset-20">
-          <a class="button button-small button-assertive button-block" ng-click="home_ctrl.logout()">Logout</a>
-        </div>
-      </div>
 
     </ion-content>
+
+  <div class="bar bar-footer bar-assertive">
+    <div class="title" ng-click="home_ctrl.logout()">Logout</div>
+  </div>
 
 
 </ion-view>
