--- a/www/templates/privatechat.html
+++ b/www/templates/privatechat.html
@@ -3,7 +3,7 @@
   <ion-header-bar align-title="center" class="bar-positive">
 
     <div class="buttons">
-      <button class="button button-icon icon ion-arrow-left-a" ng-click="prvChat_ctrl.goBack()"></button>
+      <a class="button icon-left ion-chevron-left button-clear" ng-click="prvChat_ctrl.goBack()">Back</a>
     </div>
 
     <h1 class="title"> {{ prvChat_ctrl.friendName }} </h1>
