--- a/www/css/quiz.css
+++ b/www/css/quiz.css
@@ -6,5 +6,25 @@
   padding-top: 10px;
   padding-left: 20px;
   font-weight: bold;
+}
 
+.queMarks {
+  padding: 10px 10px 10px 10px;
+}
+
+.markRed {
+  color: #007aff;
+}
+
+.markGreen {
+  color: green;
+}
+
+.markIcon {
+  font-size: 22px;
+  padding-right: 15px;
+}
+
+.markText {
+  margin-left: 0px;
 }
