--- a/www/templates/quiz.html
+++ b/www/templates/quiz.html
@@ -18,13 +18,26 @@
 
       <div class="item item-divider spinnerDivider">
         <div class="row">
-          <div class="col col-10"><ion-spinner></ion-spinner></div> <div class="col spinnerText">Looking for opponent...</div>
+          <div class="col col-10"><ion-spinner></ion-spinner></div> <div class="col spinnerText">Game Search in progress...</div>
         </div>
       </div>
 
-      <a class="item text-center" ng-click="quiz_ctrl.stopQue()">
-        Cancel search
+      <a class="item queMarks" id="addedToQueMark">
+        <i class="icon ion-checkmark-round markIcon markGreen"></i> <span class="markText">Joined the que</span>
       </a>
+
+      <a class="item queMarks" id="lookingForOpponent">
+        <i class="icon ion-stats-bars markIcon markBlue"></i> <span class="markText">Looking for opponent...</span>
+      </a>
+
+      <a class="item queMarks" id="opponentFound">
+        <i class="icon ion-checkmark-round markIcon markGreen"></i> <span class="markText">Opponent found</span>
+      </a>
+
+
+      <a class="item text-center" ng-click="quiz_ctrl.stopQue()">
+      Cancel search
+    </a>
 
     </div>
 
