--- a/www/templates/quiz.html
+++ b/www/templates/quiz.html
@@ -1,5 +1,5 @@
 
-<ion-view ng-controller="QuizController as quiz_ctrl">
+<ion-view ng-controller="QuizController as quiz_ctrl" ng-init="quiz_ctrl.stopQue()">
 
   <ion-nav-bar class="bar-positive nav-title-slide-ios7">
     <ion-nav-title>
@@ -18,7 +18,7 @@
 
       <div class="item item-divider spinnerDivider">
         <div class="row">
-          <div class="col col-10"><ion-spinner></ion-spinner></div> <div class="col spinnerText">Game Search in progress...</div>
+          <div class="col col-10"><ion-spinner></ion-spinner></div> <div class="col spinnerText" id="quizMeHeader">Game Search in progress...</div>
         </div>
       </div>
 
@@ -34,10 +34,39 @@
         <i class="icon ion-checkmark-round markIcon markGreen"></i> <span class="markText">Opponent found</span>
       </a>
 
+      <a class="item queMarks" id="preparingQuiz">
+        <i class="icon ion-stats-bars markIcon markBlue"></i> <span class="markText">Preparing Quiz...</span>
+      </a>
 
-      <a class="item text-center" ng-click="quiz_ctrl.stopQue()">
+      <a class="item queMarks" id="quizPrepared">
+        <i class="icon ion-stats-bars markIcon markBlue"></i> <span class="markText">Quiz prepared</span>
+      </a>
+
+
+      <a class="item text-center" id="cancelSearch" ng-click="quiz_ctrl.stopQue()">
       Cancel search
-    </a>
+      </a>
+
+      <div class="item item-divider opponentDeclined">
+        <i class="icon ion-ios-body markIcon markRed"></i> Opponent declined ! Returning...
+      </div>
+
+      <div class="item item-divider waitingForOpponent">
+        <i class="icon ion-ios-body markIcon markBlue"></i> Waiting for opponent...
+      </div>
+
+      <div class="item item-divider bothPlayersReady">
+        <i class="icon ion-ios-body markIcon markBlue"></i> Both players are ready !
+      </div>
+
+      <div class="item item-divider opponentFoundDivs">
+        Do you want to start?
+      </div>
+
+      <div class="button-bar opponentFoundDivs">
+        <a class="button" ng-click="quiz_ctrl.acceptQuiz()">Yes</a>
+        <a class="button" id="discardQuiz" ng-click="quiz_ctrl.discardQuiz()">No</a>
+      </div>
 
     </div>
 
