quiz az do lets play

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -56,7 +56,7 @@
 
       <br/><br/><br/>
 
-      <button class="button button-full button-balanced" ui-sref="app.quiz">
+      <button class="button button-full button-balanced" ui-sref="app.quizQue">
         QuizME
       </button>
 
