--- a/www/templates/quizQue.html
+++ b/www/templates/quizQue.html
@@ -51,8 +51,8 @@
         <i class="icon ion-ios-body markIcon markRed"></i> Opponent declined ! Returning...
       </div>
 
-      <div class="item item-divider waitingForOpponent">
-        <i class="icon ion-ios-body markIcon markBlue"></i> Waiting for opponent...
+      <div class="item item-divider waitingForServer">
+        <i class="icon ion-ios-body markIcon markBlue"></i> Waiting for server...
       </div>
 
       <div class="item item-divider bothPlayersReady">
