--- a/www/css/quiz.css
+++ b/www/css/quiz.css
@@ -28,3 +28,30 @@
 .markText {
   margin-left: 0px;
 }
+
+
+/*The progress element*/
+.progressbar {
+  background-color: #F2F2F2; /*This could be any colour*/
+  width: 100%;
+  height: 0.3em;
+  margin-top: 0.75em;
+}
+
+/*For firefox*/
+.progressbar::-moz-progress-bar {
+  background: #17BAB3;
+}
+/*For webkit browsers*/
+.progressbar::-webkit-progress-bar {
+  background: #F2F2F2;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2) inset;
+}
+.progressbar::-webkit-progress-value {
+  background: #17BAB3;
+}
+/*For IE*/
+.progressbar::-ms-fill {
+  background: #17BAB3;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2) inset;
+}
