--- a/www/templates/quizGame.html
+++ b/www/templates/quizGame.html
@@ -1,5 +1,5 @@
 
-<ion-view ng-controller="QuizController as quiz_ctrl" ng-init="quiz_ctrl.stopQue()">
+<ion-view ng-controller="QuizGameController as quizGame_ctrl">
 
   <ion-nav-bar class="bar-positive nav-title-slide-ios7">
     <ion-nav-title>
@@ -14,8 +14,43 @@
 
   <ion-content class="has-header padding">
 
+    <div id="playersDiv">
+    <div class="item item-divider">
+      Players:
+    </div>
 
-    LETS PLAY !!!!!!!!
+    <a class="item">
+      {{ quizGame_ctrl.gameData.players[0].username }}
+    </a>
+
+    <a class="item">
+      {{ quizGame_ctrl.gameData.players[1].username }}
+    </a>
+
+    <div class="item item-divider" id="difficultyDiv">
+      Difficulty:
+    </div>
+
+    <a class="item">
+      {{ quizGame_ctrl.gameData.players[0].difficulty }}
+    </a>
+
+    <br/>
+    </div>
+
+    <div class="item item-divider" id="rollingCard">
+
+      <div class="row" id="quizMeRow">
+          <div class="col col-10" id="colWithSpinner"><ion-spinner id="quizMeHeaderSpinner"></ion-spinner></div> <div class="col spinnerText" id="quizMeHeader">Rolling category for first round...</div>
+      </div>
+
+    </div>
+
+      <a class="item" id="progressText">
+        Quiz starting in {{ quizGame_ctrl.actualValue }}...
+        <progress id="progressbar" value="3" max="3" class="progressbar"></progress>
+      </a>
+
 
   </ion-content>
 
