--- a/www/css/quiz.css
+++ b/www/css/quiz.css
@@ -55,3 +55,25 @@
   background: #17BAB3;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2) inset;
 }
+
+
+.answerButtons {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 15px;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-right: 5px;
+}
+
+.correctAnswerDiv {
+  background-color: green;
+}
+
+.correctAnswerDiv {
+  background-color: red;
+}
+
+#opponentAnswersList {
+  margin-top: 20px;
+}
