--- a/www/templates/quizGame.html
+++ b/www/templates/quizGame.html
@@ -40,11 +40,41 @@
 
     <div class="item item-divider" id="rollingCard">
 
-      <div class="row" id="quizMeRow">
-          <div class="col col-10" id="colWithSpinner"><ion-spinner id="quizMeHeaderSpinner"></ion-spinner></div> <div class="col spinnerText" id="quizMeHeader">Rolling category for first round...</div>
-      </div>
+        <div class="row" id="quizMeRow">
+            <div class="col col-10" id="colWithSpinner"><ion-spinner id="quizMeHeaderSpinner"></ion-spinner></div> <div class="col spinnerText" id="quizMeHeader">Rolling category for first round...</div>
+        </div>
+
+
+
+        <div class="row text-center" id="myAnswersList">
+          <div ng-repeat="answer in myAnswers track by $index" ng-class="{'correctAnswerDiv col col-33 answerButtons' : answer.correctAnswer,
+           'incorrectAnswerDiv col col-offset-5 answerButtons' : !answer.correctAnswer }">
+            {{ answer.question }}
+          </div>
+        </div>
 
     </div>
+
+
+
+
+    <div class="item item-divider" id="opponentAnswers">
+
+          <div class="row" id="opponentAnswersListSpinner">
+            <div class="col col-10"><ion-spinner></ion-spinner></div> <div class="col spinnerText">waiting for Opponent results...</div>
+          </div>
+
+
+          <div class="row text-center" id="opponentAnswersList">
+            <div ng-repeat="answer in opponentAnswers track by $index" ng-class="{'correctAnswerDiv col col-33 answerButtons' : answer.correctAnswer,
+               'incorrectAnswerDiv col col-offset-5 answerButtons' : !answer.correctAnswer }">
+              {{ answer.question }}
+            </div>
+          </div>
+
+    </div>
+
+
 
       <a class="item" id="progressText">
         Quiz starting in {{ quizGame_ctrl.actualValue }}...
