--- a/www/templates/quizGame.html
+++ b/www/templates/quizGame.html
@@ -75,6 +75,19 @@
     </div>
 
 
+    <div class="item item-divider" ng-show="opponentAnswers">
+
+      <div class="row">
+        <div class="col" id="infoOnNewCategory">You have won this round.</div>
+      </div>
+
+      <div class="row" id="newCategorySpinner">
+        <div class="col col-10"><ion-spinner id="quizMeWorkingSpinner"></ion-spinner></div> <div class="col spinnerText"></div>
+      </div>
+
+    </div>
+
+
 
       <a class="item" id="progressText">
         Quiz starting in {{ quizGame_ctrl.actualValue }}...
