--- a/www/templates/quizQue.html
+++ b/www/templates/quizQue.html
@@ -26,7 +26,7 @@
         <i class="icon ion-checkmark-round markIcon markGreen"></i> <span class="markText">Joined the que</span>
       </a>
 
-      <a class="item queMarks" id="lookingForOpponent">
+      <a class="item queMarks" id="lookingForOpponent" ng-hide="hideLookingForOpponent">
         <i class="icon ion-stats-bars markIcon markBlue"></i> <span class="markText">Looking for opponent...</span>
       </a>
 
