--- a/www/templates/quizGame.html
+++ b/www/templates/quizGame.html
@@ -61,7 +61,7 @@
     <div class="item item-divider" id="opponentAnswers">
 
           <div class="row" id="opponentAnswersListSpinner">
-            <div class="col col-10"><ion-spinner></ion-spinner></div> <div class="col spinnerText">waiting for Opponent results...</div>
+            <div class="col col-10"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col spinnerText">waiting for Opponent results...</div>
           </div>
 
 
@@ -82,7 +82,7 @@
       </div>
 
       <div class="row" id="newCategorySpinner">
-        <div class="col col-10"><ion-spinner id="quizMeWorkingSpinner"></ion-spinner></div> <div class="col spinnerText"></div>
+        <div class="col col-10"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col" id="categorySpinnerText"></div>
       </div>
 
     </div>
