--- a/www/templates/quizGame.html
+++ b/www/templates/quizGame.html
@@ -41,7 +41,8 @@
     <div class="item item-divider" id="rollingCard">
 
         <div class="row" id="quizMeRow">
-            <div class="col col-10" id="colWithSpinner"><ion-spinner id="quizMeHeaderSpinner"></ion-spinner></div> <div class="col spinnerText" id="quizMeHeader">Rolling category for first round...</div>
+            <div class="col col-10" id="colWithSpinner"><ion-spinner id="quizMeHeaderSpinner"></ion-spinner></div>
+          <div class="col spinnerText" id="quizMeHeader">Rolling category for first round...</div>
         </div>
 
 
@@ -61,7 +62,8 @@
     <div class="item item-divider" id="opponentAnswers">
 
           <div class="row" id="opponentAnswersListSpinner">
-            <div class="col col-10"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col spinnerText">waiting for Opponent results...</div>
+            <div class="col col-10" ng-hide="opponentAnswers"><ion-spinner icon="spiral"></ion-spinner></div>
+            <div class="col spinnerText" >waiting for Opponent results...</div>
           </div>
 
 
@@ -78,11 +80,11 @@
     <div class="item item-divider" ng-show="opponentAnswers">
 
       <div class="row">
-        <div class="col" id="infoOnNewCategory">You have won this round.</div>
+        <div class="col" id="infoOnNewCategory"></div>
       </div>
 
       <div class="row" id="newCategorySpinner">
-        <div class="col col-10"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col" id="categorySpinnerText"></div>
+        <div class="col col-10" ng-hide="category"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col" id="categorySpinnerText"></div>
       </div>
 
     </div>
