--- a/www/templates/quizQue.html
+++ b/www/templates/quizQue.html
@@ -18,7 +18,7 @@
 
       <div class="item item-divider spinnerDivider">
         <div class="row">
-          <div class="col col-10"><ion-spinner></ion-spinner></div> <div class="col spinnerText" id="quizMeHeader">Game Search in progress...</div>
+          <div class="col col-10"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col spinnerText" id="quizMeHeader">Game Search in progress...</div>
         </div>
       </div>
 
