--- a/www/templates/quizGame.html
+++ b/www/templates/quizGame.html
@@ -45,18 +45,7 @@
           <div class="col spinnerText" id="quizMeHeader">Rolling category for first round...</div>
         </div>
 
-
-
-        <div class="row text-center" id="myAnswersList">
-          <div ng-repeat="answer in myAnswers track by $index" ng-class="{'correctAnswerDiv col col-33 answerButtons' : answer.correctAnswer,
-           'incorrectAnswerDiv col col-offset-5 answerButtons' : !answer.correctAnswer }">
-            {{ answer.question }}
-          </div>
-        </div>
-
     </div>
-
-
 
 
     <div class="item item-divider" id="opponentAnswers">
@@ -75,20 +64,6 @@
           </div>
 
     </div>
-
-
-    <div class="item item-divider" ng-show="opponentAnswers">
-
-      <div class="row">
-        <div class="col" id="infoOnNewCategory"></div>
-      </div>
-
-      <div class="row" id="newCategorySpinner">
-        <div class="col col-10" ng-hide="category"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col" id="categorySpinnerText"></div>
-      </div>
-
-    </div>
-
 
 
       <a class="item" id="progressText">
@@ -125,6 +100,36 @@
       Time left: {{ questionTimer }}s
       <progress id="progressbar" value="{{questionTimer}}" max="10" class="progressbar"></progress>
     </a>
+
+
+    <div class="item item-divider" id="myAnswersInfo">
+
+      <div class="row">
+        <div class="col">Your answers:</div>
+      </div>
+
+      <div class="row text-center" id="myAnswersList">
+        <div ng-repeat="answer in myAnswers track by $index" ng-class="{'correctAnswerDiv col col-33 answerButtons' : answer.correctAnswer,
+           'incorrectAnswerDiv col col-offset-5 answerButtons' : !answer.correctAnswer }">
+          {{ answer.question }}
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="item item-divider" id="infoOnResults">
+
+      <div class="row">
+        <div class="col" id="infoOnNewCategory"></div>
+      </div>
+
+      <div class="row" id="newCategorySpinner">
+        <div class="col col-10" ng-hide="category"><ion-spinner icon="spiral"></ion-spinner></div> <div class="col" id="categorySpinnerText"></div>
+      </div>
+
+    </div>
+
 
 
 
