--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -36,7 +36,7 @@
 
     <div class="row">
       <div class="col col-70 col-offset-15">
-        <a class="button button-royal button-block" ng-hide="login_ctrl.logged_in || login_ctrl.jwtlogin" ng-click="login_ctrl.jwtLogin()">Login with User / Password  </a>
+        <a class="button button-royal button-block" ng-hide="login_ctrl.logged_in || login_ctrl.jwtlogin" ng-click="login_ctrl.jwtLogin()">Login with User / Password</a>
       </div>
     </div>
 
@@ -59,7 +59,7 @@
         <label class="item item-input" ng-class="{ 'has-errors' : jwtLoginForm.username.$invalid && jwtLoginForm.username.$touched,
          'no-errors': jwtLoginForm.username.$valid && jwtLoginForm.username.$touched }">
           <span class="input-label">Username</span>
-          <input type="text" name="username" ng-model="login_ctrl.authorization.username" ng-minlength="2" ng-maxlength="15">
+          <input type="text" name="username" ng-model="login_ctrl.username" ng-minlength="2" ng-maxlength="15">
         </label>
 
         <div class="error-container" ng-show="jwtLoginForm.username.$error && jwtLoginForm.username.$touched" ng-messages="jwtLoginForm.username.$error">
@@ -69,7 +69,7 @@
       <label class="item item-input" ng-class="{ 'has-errors' : jwtLoginForm.password.$invalid && jwtLoginForm.$submitted,
        'no-errors' : jwtLoginForm.password.$valid  && jwtLoginForm.$submitted}">
         <span class="input-label">Password</span>
-        <input type="password" name="password" ng-model="login_ctrl.authorization.password" ng-minlength="3" ng-maxlength="15">
+        <input type="password" name="password" ng-model="login_ctrl.password" ng-minlength="3" ng-maxlength="15">
       </label>
 
       <div class="error-container last-error-container" ng-show="jwtLoginForm.password.$error" ng-messages="jwtLoginForm.password.$error">
