--- a/www/templates/quizQue.html
+++ b/www/templates/quizQue.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="item item-divider waitingForServer">
-        <i class="icon ion-ios-body markIcon markBlue"></i> Waiting for server...
+        <i class="icon ion-ios-body markIcon markBlue"></i> Waiting for Opponent...
       </div>
 
       <div class="item item-divider bothPlayersReady">
