further refactors and jquery updates

--- a/www/templates/quizGame.html
+++ b/www/templates/quizGame.html
@@ -3,7 +3,7 @@
 
   <ion-nav-bar class="bar-positive nav-title-slide-ios7">
     <ion-nav-title>
-      {{ quizQue_ctrl.quizMeStage }}
+      {{ quizGame_ctrl.quizMeStage }}
     </ion-nav-title>
   </ion-nav-bar>
 
@@ -17,23 +17,6 @@
    <quiz-game-directive></quiz-game-directive>
 
 <!--
-
-
-    <div class="item item-divider" id="rollingCard">
-
-        <div class="row" id="quizMeRow">
-            <div class="col col-10" id="colWithSpinner">
-
-              <div class="cssload-container">
-                <div class="cssload-whirlpool"></div>
-              </div>
-
-            </div>
-          <div class="col spinnerText" id="quizMeHeader">Rolling category for first round...</div>
-        </div>
-
-    </div>
-
 
     <div class="item item-divider" id="opponentAnswers">
 
@@ -63,9 +46,6 @@
         Quiz starting in {{ quizGame_ctrl.actualValue }}...
         <progress id="progressbar" value="3" max="3" class="progressbar"></progress>
       </a>
-
-
-
 
 
     <ul class="list item-text-wrap" id="listWithQuestions">
